Auth0 get profile
